# mlops-assesment

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
image-classifier-app/: Dockerfile  app.py  cerebrium.toml  main.py  pyproject.toml  requirements.txt
image-classifier-app/convert_model/: convert_to_onnx.py
image-classifier-app/inference/: predictor.py
image-classifier-app/model_architecture/: architecture.py
model_architecture/: architecture.py
test/: test_server.py
